# DailyOS

./: .gitignore  package-lock.json  package.json  prd.txt  tasks.md  tasks.txt
backend/: pyproject.toml
backend/app/: crud.py  initial_data.py  models.py
backend/app/alembic/versions/: 2e6a4198e395_add_project_and_goal_models.py  ed9fbb32dd97_add_dailyos_models_project_goal_task_.py
backend/app/api/: main.py
backend/app/api/routes/: chore_logs.py  chores.py  dashboard.py  goals.py  projects.py  tasks.py  time_tracking.py
backend/scripts/: db_test.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: routeTree.gen.ts  theme.tsx
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/components/Chores/: ChoreModal.tsx
frontend/src/components/Common/: Navbar.tsx  Sidebar.tsx  SidebarItems.tsx
frontend/src/components/Goals/: GoalModal.tsx
frontend/src/components/Items/: AddItem.tsx  DeleteItem.tsx  EditItem.tsx
frontend/src/components/Projects/: ProjectModal.tsx
frontend/src/components/Tasks/: TaskModal.tsx
frontend/src/components/ui/: card.tsx  empty-state.tsx  loading.tsx  progress.tsx  stats.tsx
frontend/src/routes/: _layout.tsx
frontend/src/routes/_layout/: chores.tsx  dashboard.tsx  goals.tsx  index.tsx  items.tsx  projects.$projectId.goals.tsx  projects.tsx  tasks.tsx
frontend/src/theme/: button.recipe.ts  card.recipe.ts
